--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: Inter, sans-serif;
 }
 
 a {
   text-decoration: none;
-
 }
 
 .container {
@@ -31,7 +31,6 @@ a {
 
 .header-logo h1 {
   margin: 0;
-  font-family: Inter, sans-serif;
   font-size: 24px;
   font-weight: 700;
   line-height: 29px;
@@ -39,7 +38,6 @@ a {
 
 .header-logo p {
   margin: 0;
-  font-family: Inter, sans-serif;
   font-size: 12px;
   font-weight: 300;
   line-height: 15px;
@@ -62,6 +60,10 @@ a {
   align-self: flex-start;
 }
 
+.search {
+  margin-bottom: 49px;
+}
+
 .search-box {
   border-radius: 5px;
   background: rgba(255, 73, 73, 1);
@@ -81,8 +83,7 @@ a {
   outline: none;
   border-radius: 3px;
   background-color: #fff;
-  max-width: 0;
-
+  min-width: 0;
 }
 
 .search-box button {
@@ -100,6 +101,274 @@ a {
   cursor: pointer;
 }
 
+.content {
+  margin-bottom: 94px;
+}
+
+.content-box {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.content-main {
+  flex-grow: 1;
+}
+
+.content-main__title {
+  margin-top: 0;
+  margin-bottom: 25px;
+  color: rgba(0, 0, 0, 1);
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 29px;
+}
+
+.content-cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.content-cards___item {
+  width: calc((100% - 60px) / 3);
+}
+
+.content-cards___item--img {
+  width: 100%;
+  display: block;
+  margin-bottom: 12px;
+}
+
+.content-cards___item--img img {
+  width: 100%;
+  display: block;
+}
+
+.content-cards___item--title {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4px;
+  margin-bottom: 4px;
+}
+
+.content-cards___item--title h5 {
+  font-weight: 700;
+}
+
+.content-cards___item--title span {
+  font-weight: 400;
+}
+
+.content-cards___item--title h5,
+.content-cards___item--title span {
+  margin: 0;
+  color: rgba(0, 0, 0, 1);
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.content-cards___item--descr {
+  margin-top: 0;
+  margin-bottom: 11px;
+  color: rgba(134, 134, 134, 1);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+}
+
+.content-cards___item--rating {
+  color: rgba(4, 163, 30, 1);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19px;
+  margin: 0;
+}
+
+.content-sidebar {
+  width: 262px;
+  min-width: 262px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.content-sidebar__info {
+  margin-bottom: 120px;
+}
+
+.content-sidebar__info--titile {
+  color: rgba(0, 0, 0, 1);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19px;
+  margin-top: 0;
+  margin-bottom: 28px;
+}
+
+.content-sidebar__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.content-sidebar__info__item {
+  display: flex;
+  flex-direction: column;
+}
+
+.content-sidebar__info__item h5,
+.content-sidebar__info__item p {
+  color: rgba(0, 0, 0, 1);
+  font-size: 14px;
+  line-height: 17px;
+  margin: 0;
+}
+
+.content-sidebar__info__item h5 {
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+
+.content-sidebar__info__item p {
+  font-weight: 400;
+}
+
+.content-sidebar__footer {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  color: rgba(170, 170, 170, 1);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+}
+
+.content-sidebar__footer p {
+  margin: 0;
+}
+
+.content-sidebar__footer a {
+  color: rgba(170, 170, 170, 1);
+}
+
+.content-sidebar__footer a:hover {
+  color: rgb(255, 73, 73);
+}
+
+.content-film {
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-between;
+  gap: 28px;
+}
+
+.content-film__img {
+  width: calc((100% - 28px) / 2);
+  display: flex;
+  justify-content: center;
+}
+
+.content-film__img img {
+  width: 100%;
+  display: block;
+  max-width: 450px;
+}
+
+.content-film__info {
+  width: calc((100% - 28px) / 2);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.content-film__info__title {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4px;
+  margin-bottom: 3px;
+}
+
+.content-film__info__title h1,
+.content-film__info__title p {
+  color: rgba(0, 0, 0, 1);
+  font-size: 24px;
+  line-height: 29px;
+  margin: 0;
+}
+
+.content-film__info__title h1 {
+  font-weight: 400;
+}
+
+.content-film__info__title p {
+  font-weight: 700;
+}
+
+.content-film__info__descr {
+  color: rgba(134, 134, 134, 1);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  margin-top: 0;
+  margin-bottom: 2px;
+}
+
+.content-film__info__rating {
+  color: rgba(4, 163, 30, 1);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19px;
+  margin-top: 0;
+  margin-bottom: 29px;
+}
+
+.content-film__info__text {
+  color: rgba(0, 0, 0, 1);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+
+.content-film__info__text p {
+  margin: 0;
+}
+
+.content-film__info__controls button {
+  padding: 16px 98px;
+  border-radius: 5px;
+  background: rgba(255, 73, 73, 1);
+  color: rgba(255, 255, 255, 1);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+@media(max-width: 991px) {
+  .content-cards___item {
+    width: calc((100% - 30px) / 2);
+  }
+
+  .content-film {
+    flex-direction: column;
+  }
+
+  .content-film__img {
+    width: 100%;
+  }
+
+  .content-film__info {
+    width: 100%;
+  }
+}
+
 @media(max-width: 768px) {
   .header-cotrols {
     display: none;
@@ -112,4 +381,24 @@ a {
   .search-box input {
     padding: 0 15px;
   }
+
+  .content-box {
+    flex-direction: column;
+  }
+
+  .content-sidebar {
+    width: 100%;
+  }
+}
+
+@media(max-width: 480px) {
+  .content-cards___item {
+    width: 100%;
+    min-width: 100%;
+  }
+
+  .content-sidebar {
+    min-width: 100%;
+  }
+
 }
